# bundleInspector

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: quality.yml
benchmarks/: packaging-constraints.txt  performance-constraints.txt
benchmarks/baselines/: correlator.json  detection.json
docs/: CONFIG_REFERENCE.md  CUSTOM_RULES.md  HELDOUT_GOVERNANCE.md  IMPLEMENTATION_CHECKLIST.md  USER_GUIDE.ko.md  USER_GUIDE.md
examples/scan-profiles/: README.md  conservative.yml  deep.yml  fast.yml  standard.yml  ultra-safe.yml
examples/yaml-configs/: README.md  default.yml
examples/yaml-configs/rulesets/: meta.yml
packaging/: distribution-manifest.json
scripts/: __init__.py  benchmark_correlator.py  benchmark_detection.py  build_detection_corpus.py  build_heldout_governance_corpus.py  run_detection_metrics.py  run_heldout_detection_gate.py  update_detection_baseline.py  update_distribution_manifest.py  update_heldout_governance_artifact.py  update_performance_baselines.py  verify_distribution_contents.py
src/bundleInspector/: __init__.py  cli.py  config.py
src/bundleInspector/classifier/: __init__.py  risk_model.py  scoring.py
src/bundleInspector/collector/: __init__.py  base.py  headless.py  local.py  manifest.py  scope.py  static.py
src/bundleInspector/core/: __init__.py  asset_analysis.py  asset_analyzer.py  cookie_import.py  dedup.py  download_surface.py  fp_annotate.py  job_queue.py  orchestrator.py  progress.py  rate_limiter.py  resume_policy.py  safe_http.py  safe_socks.py  security.py  text_decode.py  url_utils.py  vendor.py
src/bundleInspector/correlator/: __init__.py  api_map.py  cluster.py  dormant.py  edges.py  graph.py  runtime_surface.py
src/bundleInspector/mcp_server/: __init__.py  server.py  service.py
src/bundleInspector/normalizer/: __init__.py  beautify.py  line_mapping.py  sourcemap.py
src/bundleInspector/parser/: __init__.py  acorn_parse.js  chunk_analyzer.py  export_scopes.py  ir_builder.py  js_parser.py  language.py  lexical_context.py  native_acorn.py  string_table.py  tree_sitter_backend.py
src/bundleInspector/reporter/: __init__.py  base.py  chain_view.py  explain.py  html_reporter.py  json_reporter.py  poc.py  public_view.py  redaction.py  sarif_reporter.py  wordlist_reporter.py
src/bundleInspector/rules/: __init__.py  access_control.py  base.py  context_filter.py  custom.py  engine.py
src/bundleInspector/storage/: __init__.py  artifact_store.py  atomic.py  finding_store.py  identifiers.py  job_repository.py  models.py
src/bundleInspector/utils/: yaml_loader.py
src/bundleInspector/validation/: __init__.py  metrics.py
tests/: __init__.py  test_backlog_batch4.py  test_backlog_batch6.py  test_backlog_contained_fixes.py  test_ci_contract.py  test_documentation_contract.py  test_larger_detection_items.py
tests/corpus/: README.md  baseline.json  gates.json  manifest.jsonl  partition.json
tests/corpus/manual/: chunk_negative_comment.js  chunk_negative_file-path.js  chunk_webpack_double_positive.js  chunk_webpack_single_positive.js  debug_negative_comment.js  debug_negative_string.js  debug_source_map_positive.js  debugger_statement_positive.js  domain_internal_positive.js  domain_link_local_positive.js  domain_negative_invalid-range.js  domain_negative_public-range.js  flag_literal_positive.js  flag_negative_generic-method.js  flag_negative_prose.js  flag_sdk_positive.js  flow_probable_conditional.js  minified_security.js  modern_security.tsx  route_browser_router_positive.js  secret_known_prefix_variant.js  secret_negative_placeholders.js  sink_negative_safe_attribute.js  (+4 more)
tests/fixtures/: fake_secrets.py  sample_js.py
tests/heldout/: frozen-governance.sha256
tests/test_audit_regressions/: test_audit_fixes.py
tests/test_cli/: test_analyze_config.py  test_cli_output.py  test_convert.py
tests/test_collector/: test_headless.py  test_headless_lifecycle.py  test_local.py  test_manifest.py  test_multipage_resume.py  test_scope.py  test_static_remediation.py
tests/test_config/: test_min_confidence.py  test_shipped_profiles.py
tests/test_core/: test_asset_analyzer_split.py  test_asset_analyzer_virtual_sources.py  test_completeness_pipeline.py  test_cookie_import.py  test_download_surface.py  test_fp_annotate.py  test_orchestrator.py  test_rate_limiter.py  test_resume_policy.py  test_safe_http_limits.py  test_safe_socks.py  test_security.py  test_vendor.py
tests/test_correlator/: test_api_map.py  test_dormant.py  test_graph.py  test_graph_fairness.py
tests/test_detection_quality/: test_chain_view.py  test_do_endpoints_and_secret_fp.py  test_sink_upload_detectors.py  test_taint_correlation.py  test_taint_engine.py
tests/test_final_audit_fixes/: test_final_audit_fixes.py
tests/test_flow_audit_fixes/: test_flow_audit_fixes.py
tests/test_mcp/: test_public_mcp.py
tests/test_normalizer/: test_beautify.py  test_sourcemap_ssrf.py
tests/test_parser/: test_chunk_analyzer.py  test_export_scopes_reexport.py  test_ir_builder.py  test_ir_truncation_telemetry.py  test_js_parser.py  test_tree_sitter_backend.py
tests/test_reaudit_fixes/: test_reaudit_fixes.py
tests/test_reporter/: test_explain.py  test_reporters.py
tests/test_rules/: test_custom_regex_safety.py  test_custom_rules.py  test_debug_fp.py  test_endpoints.py  test_engine_completeness.py  test_enh1_access_control.py  test_enh3_contract.py  test_enh4_idor.py  test_enh5_routes.py  test_enh6_graphql_ws.py  test_fp_reduction.py  test_secrets.py  test_ssrf_and_disclosure.py
tests/test_scripts/: test_benchmark_correlator.py  test_benchmark_detection.py  test_distribution_contents.py  test_heldout_detection_gate.py  test_heldout_governance_artifact.py  test_performance_baseline_writer.py
tests/test_storage/: test_artifact_store_hash_validation.py  test_atomic_hardening.py  test_non_ascii_roundtrip.py  test_portable_storage.py  test_sensitive_persistence.py
tests/test_upgrades/: test_upgrades.py
tests/test_utils/: test_yaml_loader.py
tests/test_validation/: __init__.py  test_detection_metrics.py
(+19 files in other folders)
