[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "bundleInspector"
version = "0.1.0"
description = "JavaScript Security Analysis Tool - Extract hidden APIs, domains, secrets from JS files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "BundleInspector Team" }
]
keywords = [
    "security",
    "javascript",
    "static-analysis",
    "api-discovery",
    "secret-detection",
    "bug-bounty",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27.1,<0.29",
    "httpcore>=1.0.5,<1.1",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "esprima>=4.0.0",
    "jsbeautifier>=1.14.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "regex>=2023.0.0",
    "cryptography>=42,<47",
    "tree-sitter>=0.26,<0.27",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-typescript>=0.23.2,<0.24",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "build==1.5.0",
    "twine==6.2.0",
    "check-wheel-contents==0.6.3",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
mcp = [
    "mcp>=1.28.1,<2",
    "sse-starlette>=1.6.1,<3",
    "starlette>=0.40,<0.42",
]

[project.scripts]
bundleInspector = "bundleInspector.cli:main"
bundleInspector-mcp = "bundleInspector.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/g2hsec/bundleInspector"
Documentation = "https://github.com/g2hsec/bundleInspector#readme"
Repository = "https://github.com/g2hsec/bundleInspector"
Issues = "https://github.com/g2hsec/bundleInspector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bundleInspector"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github/workflows/quality.yml",
    "/LICENSE",
    "/README.md",
    "/README.en.md",
    "/README.ko.md",
    "/benchmarks",
    "/docs",
    "/examples",
    "/packaging",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["bundleInspector"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/bundleInspector"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
